Mon Sep 23 18:01:52 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.[ch]: Add gtk_notebook_get_n_pages
	(#73229, Havoc Pennington)

	* gtk/gtknotebook.c (gtk_notebook_get_nth_page): Handle
	-1 to mean the last page, as we do elsewhere. (#73229)

Mon Sep 23 17:50:23 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.[ch] gtk/gtkentry.c gtk/gtkmenubar.c
	gtk/gtkmenuitem.c gtk/gtktextview.c: Make
	gtk_menu_shell_select_first() public. (#70373)

Mon Sep 23 16:48:46 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkkeys.[ch] gdk/x11/gdkkeys-x11.c gdk/x11/gdkevents-x11.c:
	Add a keys_changed signal emitted when the keymap changes.
	(#72148)
	
	* gtk/gtkkeyhash.c (_gtk_key_hash_remove_entry): 
	Hook up code to handle keymap changes, change to keep
	a linked list of keymap entries so that we can reinsert
	them in the same order on a keymap change.

Mon Sep 23 14:58:04 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkhandlebox.h gtk/gtktextbtree.[ch]:
 	Use 'signed int' not 'gint' for signed bitfields.
 	(#93020, Vitaly Tishkov)
 
 	* gtk/gtktextlayout.h gtk/gtktextbtree.[ch]: 
 	Fix some 'gint' bitfields that should have been
 	unsigned.
	
Mon Sep 23 12:24:14 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (status_window_get): 
	Fix incorrect usage of gdk_get_default_root_window ()).
	(#92767)

Mon Sep 23 12:12:48 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c: Patch from Joshua N Pritikin to
	fix problem where signal connection wasn't removed
	from adjustment on finalize. (#93962)

Sun Sep 22 18:22:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/linux-fb/{gdkinput.c,gdkkeyboard-fb.c,gdk/linux-fb/gdkmain-fb.c,
	gdk/linux-fb/gdkprivate-fb.h, gdk/linux-fb/gdkwindow-fb.c}:
	Patch from Eric Warmenhoven to with miscellaneous linux-fb
	fixes, including a fix for a crash in 
	gdk_keymap_get_entries_for_keycode (#87420)

2002-09-22  Matthias Clasen  <maclas@gmx.de>
